# landbot-test2-back

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: config.py  container.py  main.py
app/adapters/controllers/: campaign_controller.py
app/adapters/db/: models.py
app/adapters/repositories/: campaign_repository.py
app/core/entities/: campaign.py
app/core/exceptions/: exceptions.py
app/core/use_cases/: campaign_service.py
app/utils/: logging_config.py
scripts/: build_docker_image_dev.sh  build_docker_image_prod.sh
tests/: test_campaign.py  test_functional.py
tests/postman/: landbot_campaign_api.postman_collection.json  landbot_env.json
